# vlsi

./: LICENSE  README.md
bsv/: counter.bsv
my_ips/crpm/d_ip_m_pcrm_ctrl/: d_ip_m_pcrm_ctrl.sv  tb_d_ip_m_pcrm_ctrl.sv
my_ips/test/: dump.vcd  dut.sv  tb.sv  test
my_socs/MyFirstSoC/doc/: Diagrams.pptx  MyFirstSoC_ArchSpec.docx
my_socs/MyFirstSoC/rtl/: soc_top.sv
sysc/first_project/: CMakeLists.txt  README  main.cpp  run.csh
yale-act/: fifo.act  test_fifo.act
